@@ -1,5 +1,10 @@
 Version 2.0
 --------------
+2011-09-22 erra <erra@ya.ru>
+	* ircd/s_misc.c: check_triggers() call removed from exit_one_client
+	* ircd/s_user.c: check_triggers() call added to m_quit
+	* ircd/s_user_ext.h: removed EXTERN declaration for check_triggers()
+
 2011-09-20 erra <erra@ya.ru>
 	* common/support.c, common/support_ext.h: cstrip() added for
 			stripping colors from spam messages before checking
@@ -8,7 +13,6 @@ Version 2.0
 			DECODE_CONFIG was defined at compile time
 	* ircd/s_debug.c: STRIP_COLORS is shown as 'b' in server_opts
 	* ircd/s_err.c: RPL_STATSTRIGGER fixed
-	* ircd/s_misc.c: check_spam() call added to exit_one_client
 	* ircd/s_serv.c: /stats T output fixed
 	* ircd/s_user.c: check_spam() created to be called from m_message
 			as well as m_part and exit_one_client
